--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 custom-navbar">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg py-3 custom-navbar">
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand d-flex align-items-center" href="#">
@@ -78,25 +79,29 @@
                     </li>
                 </ul>
 
-                <!-- Botões de Mídia Social -->
-                <div class="d-flex align-items-center ms-lg-3">
-                    <a href="#" class="text-white me-3">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="#" class="text-white me-3">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="#" class="text-white me-3">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                    <a href="#" class="text-white me-3">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
+                <!-- Ícones e Botão -->
+                <div class="d-lg-flex align-items-center ms-lg-3 flex-column flex-lg-row text-center">
+                    <div class="d-flex justify-content-center justify-content-lg-end mb-3 mb-lg-0">
+                        <a href="#" class="text-white me-3">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" class="text-white me-3">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#" class="text-white me-3">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        <a href="#" class="text-white me-3">
+                            <i class="fa-brands fa-tiktok"></i>
+                        </a>
+                    </div>
                     <a href="#" class="btn btn-gold text-uppercase">Ingresso Online</a>
                 </div>
             </div>
-        </div>
     </nav>
+
+    <!--Imagem index-->
+    <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_TOPO.jpg">
 </body>
 
 </html>
