--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="logo.png" alt="Logo" class="me-2" style="height: 40px;">
-                <span>50 Anos</span>
+                <img src="./imgs/LOGO EXPO 50 ANOS - VERDE COM DOURADO.png" alt="Logo" class="me-2" style="height: 150px;">
             </a>
 
             <!-- Botão de Colapso -->
