--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="./imgs/LOGO EXPO 50 ANOS - VERDE COM DOURADO.png" alt="Logo" class="me-2" style="height: 150px;">
+                <img src="./imgs/LOGO EXPO 50 ANOS - VERDE COM DOURADO.png" alt="Logo" class="me-2"
+                    style="height: 150px;">
             </a>
 
             <!-- Botão de Colapso -->
@@ -101,6 +102,80 @@
 
     <!--Imagem index-->
     <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_TOPO.jpg">
+
+    <!--Imagens-->
+    <div class="row no-glutters">
+        <div class="col-md-3">
+            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_1.jpg">
+        </div>
+        <div class="col-md-3">
+            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_2.jpg">
+        </div>
+        <div class="col-md-3">
+            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_3.jpg">
+        </div>
+        <div class="col-md-3">
+            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_4.jpg">
+        </div>
+    </div>
+
+    <!--Ultimas noticias-->
+    <section class="ultimas-noticias py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <!-- Texto à esquerda -->
+                <div class="col-md-4">
+                    <h2 class="mb-3">Últimas Notícias</h2>
+                    <p class="atualizacoes">Confira todas as atualizações da Expo Umuarama</p>
+                </div>
+                <!-- Cards à direita -->
+                <div class="col-md-8">
+                    <div class="row g-3">
+                        <!-- Imagem maior à direita -->
+                        <div class="col-md-6">
+                            <div class="noticia-card noticia-card-grande">
+                                <img class="img-fluid rounded"
+                                    src="./imgs/HOME/JPGS/IMAGENS_HOME/Julgamento-28 copy.jpg" alt="Notícia Maior">
+                                <p class="noticia-texto">Centenas de pessoas participam do lançamento da Expo 2024</p>
+                            </div>
+                        </div>
+                        <!-- Outras imagens embaixo -->
+                        <div class="col-md-6">
+                            <div class="row g-3">
+                                <div class="col-6">
+                                    <div class="noticia-card">
+                                        <img class="img-fluid rounded"
+                                            src="./imgs/HOME/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Parque-Crianca-58.jpg" alt="Notícia 1">
+                                        <p class="noticia-texto">Centenas de pessoas participam do lançamento da Expo
+                                            2024</p>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="noticia-card">
+                                        <img class="img-fluid rounded" src="./imgs/HOME/JPGS/IMAGENS_HOME/ARENA.jpg"
+                                            alt="Notícia 2">
+                                        <p class="noticia-texto">Centenas de pessoas participam da Expo 2024</p>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="noticia-card">
+                                        <img class="img-fluid rounded"
+                                            src="./imgs/HOME/JPGS/IMAGENS_HOME/Palestra 11-03-1 copy.jpg"
+                                            alt="Notícia 3">
+                                        <p class="noticia-texto">Centenas de pessoas participam da Expo 2024</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Botão -->
+                    <div class="text-center mt-4">
+                        <a href="#" class="btn btn-gold text-uppercase">Quero ver mais</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
