--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                                 <div class="col-6">
                                     <div class="noticia-card">
                                         <img class="img-fluid rounded"
-                                            src="./imgs/HOME/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Parque-Crianca-58.jpg" alt="Notícia 1">
+                                            src="./imgs/HOME/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Parque-Crianca-58.jpg"
+                                            alt="Notícia 1">
                                         <p class="noticia-texto">Centenas de pessoas participam do lançamento da Expo
                                             2024</p>
                                     </div>
@@ -176,6 +177,61 @@
             </div>
         </div>
     </section>
+
+    <!-- ExpoTV -->
+    <section class="expo-tv py-5">
+        <div class="container">
+            <!-- Título -->
+            <div class="row mb-4">
+                <div class="col-md-12 text-center">
+                    <h2><i class="fa-regular fa-circle-play"></i> Expo<span style="font-weight: bold;">TV</span></h2>
+                </div>
+            </div>
+            <!-- Vídeo Principal -->
+            <div class="row mb-4">
+                <div class="col-md-12">
+                    <div class="video-maior">
+                        <img class="img-fluid rounded" src="./imgs/BLOG/JPGS/Parque-Crianca-77.jpg"
+                            alt="Vídeo Principal">
+                        <div class="play-overlay">
+                            <i class="fa-regular fa-circle-play"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Vídeos Menores -->
+            <div class="row g-3">
+                <div class="col-md-4">
+                    <div class="video-menor">
+                        <img class="img-fluid rounded"
+                            src="./imgs/HOME/JPGS/IMAGENS_HOME/Abertura-Rodeio-13-03-144 copy.jpg" alt="Vídeo 1">
+                        <div class="play-overlay">
+                            <i class="fa-regular fa-circle-play"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="video-menor">
+                        <img class="img-fluid rounded" src="./imgs/HOME/JPGS/IMAGENS_HOME/Gusttavo Lima-130 copy.jpg"
+                            alt="Vídeo 2">
+                        <div class="play-overlay">
+                            <i class="fa-regular fa-circle-play"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="video-menor">
+                        <img class="img-fluid rounded" src="./imgs/HOME/JPGS/IMAGENS_HOME/H&G-11 copy.jpg"
+                            alt="Vídeo 3">
+                        <div class="play-overlay">
+                            <i class="fa-regular fa-circle-play"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
