--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="./imgs/LOGO EXPO 50 ANOS - VERDE COM DOURADO.png" alt="Logo" class="me-2"
+                <img src="./imgs/LOGO EXPO 50 ANOS - DOURADO.png" alt="Logo" class="me-2"
                     style="height: 150px;">
             </a>
 
@@ -227,6 +227,44 @@
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Galeria de fotos-->
+    <section class="galeria">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="mt-2 mb-4">Galeria de Fotos</h2>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Parque-Crianca-70.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Leilao 10-03-15.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Palestra 11-03-2.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Curso de Ovinocultura-03.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/Abertura-Rodeio-13-03-144 copy.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/IMG_6788.JPG">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Mulheres-Palestra-084.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/Julgamento-28 copy.jpg">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Mulheres-Palestra-218.jpg">
                 </div>
             </div>
         </div>
