--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <h2 class="mt-2 mb-4">Galeria de Fotos</h2>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Parque-Crianca-70.jpg">
+                    <img class="img-fluid" src="./imgs/LOGO EXPO 50 ANOS - VERDE COM DOURADO.png">
                 </div>
                 <div class="col-md-4">
                     <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Leilao 10-03-15.jpg">
