--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
     </nav>
 
     <!--Imagem index-->
-    <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_TOPO.jpg">
+    <img class="img-fluid" src="./imgs/BANNER_TOPO.jpg">
 
     <!--Imagens-->
     <div class="row no-glutters">
         <div class="col-md-3">
-            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_1.jpg">
+            <img class="img-fluid" src="./imgs/BANNER_1_HOME.jpg">
         </div>
         <div class="col-md-3">
-            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_2.jpg">
+            <img class="img-fluid" src="./imgs/BANNER_2_HOME.jpg">
         </div>
         <div class="col-md-3">
-            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_3.jpg">
+            <img class="img-fluid" src="./imgs/BANNER_3.jpg">
         </div>
         <div class="col-md-3">
-            <img class="img-fluid" src="./imgs/HOME/JPGS/BANNER_4.jpg">
+            <img class="img-fluid" src="./imgs/BANNER_4.jpg">
         </div>
     </div>
 
@@ -135,7 +135,7 @@
                         <div class="col-md-5">
                             <div class="noticia-card noticia-card-grande">
                                 <img class="img-fluid rounded"
-                                    src="./imgs/HOME/JPGS/IMAGENS_HOME/Julgamento-28 copy.jpg" alt="Notícia Maior">
+                                    src="./imgs/Julgamento-28 copy.jpg" alt="Notícia Maior">
                                 <p class="noticia-texto">Centenas de pessoas participam do lançamento da Expo 2024</p>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                                 <div class="col-6">
                                     <div class="noticia-card">
                                         <img class="img-fluid rounded"
-                                            src="./imgs/HOME/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Parque-Crianca-58.jpg"
+                                            src="./imgs/Parque-Crianca-58.jpg"
                                             alt="Notícia 1">
                                         <p class="noticia-texto">Centenas de pessoas participam do lançamento da Expo
                                             2024</p>
@@ -153,7 +153,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="noticia-card">
-                                        <img class="img-fluid rounded" src="./imgs/HOME/JPGS/IMAGENS_HOME/ARENA.jpg"
+                                        <img class="img-fluid rounded" src="./imgs/ARENA.jpg"
                                             alt="Notícia 2">
                                         <p class="noticia-texto">Centenas de pessoas participam da Expo 2024</p>
                                     </div>
@@ -161,7 +161,7 @@
                                 <div class="col-12">
                                     <div class="noticia-card">
                                         <img class="img-fluid rounded"
-                                            src="./imgs/HOME/JPGS/IMAGENS_HOME/Palestra 11-03-1 copy.jpg"
+                                            src="./imgs/Palestra 11-03-1 copy.jpg"
                                             alt="Notícia 3">
                                         <p class="noticia-texto">Centenas de pessoas participam da Expo 2024</p>
                                     </div>
@@ -191,7 +191,7 @@
             <div class="row mb-4">
                 <div class="col-md-12">
                     <div class="video-maior">
-                        <img class="img-fluid rounded" src="./imgs/BLOG/JPGS/Parque-Crianca-77.jpg"
+                        <img class="img-fluid rounded" src="./imgs/Parque-Crianca-77.jpg"
                             alt="Vídeo Principal">
                         <div class="play-overlay">
                             <i class="fa-regular fa-circle-play"></i>
@@ -204,7 +204,7 @@
                 <div class="col-md-4">
                     <div class="video-menor">
                         <img class="img-fluid rounded"
-                            src="./imgs/HOME/JPGS/IMAGENS_HOME/Abertura-Rodeio-13-03-144 copy.jpg" alt="Vídeo 1">
+                            src="./imgs/Abertura-Rodeio-13-03-144 copy.jpg" alt="Vídeo 1">
                         <div class="play-overlay">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="video-menor">
-                        <img class="img-fluid rounded" src="./imgs/HOME/JPGS/IMAGENS_HOME/Gusttavo Lima-130 copy.jpg"
+                        <img class="img-fluid rounded" src="./imgs/Gusttavo Lima-130 copy.jpg"
                             alt="Vídeo 2">
                         <div class="play-overlay">
                             <i class="fa-regular fa-circle-play"></i>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="video-menor">
-                        <img class="img-fluid rounded" src="./imgs/HOME/JPGS/IMAGENS_HOME/H&G-11 copy.jpg"
+                        <img class="img-fluid rounded" src="./imgs/H&G-11 copy.jpg"
                             alt="Vídeo 3">
                         <div class="play-overlay">
                             <i class="fa-regular fa-circle-play"></i>
@@ -240,31 +240,31 @@
                     <h2 class="mt-2 mb-4">Galeria de Fotos</h2>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/LOGO EXPO 50 ANOS - VERDE COM DOURADO.png">
+                    <img class="img-fluid" src="./imgs/Parque-Crianca-70.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Leilao 10-03-15.jpg">
+                    <img class="img-fluid" src="./imgs/Leilao 10-03-15.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Palestra 11-03-2.jpg">
+                    <img class="img-fluid" src="./imgs/Palestra 11-03-2.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Curso de Ovinocultura-03.jpg">
+                    <img class="img-fluid" src="./imgs/Curso de Ovinocultura-03.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/Abertura-Rodeio-13-03-144 copy.jpg">
+                    <img class="img-fluid" src="./imgs/Abertura-Rodeio-13-03-144 copy.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/IMG_6788.JPG">
+                    <img class="img-fluid" src="./imgs/IMG_6788.JPG">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Mulheres-Palestra-084.jpg">
+                    <img class="img-fluid" src="./imgs/Mulheres-Palestra-084.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/Julgamento-28 copy.jpg">
+                    <img class="img-fluid" src="./imgs/Julgamento-28 copy.jpg">
                 </div>
                 <div class="col-md-4">
-                    <img class="img-fluid" src="./imgs/home/JPGS/IMAGENS_HOME/GALERIA_DE_FOTOS/Mulheres-Palestra-218.jpg">
+                    <img class="img-fluid" src="./imgs/Mulheres-Palestra-218.jpg">
                 </div>
             </div>
         </div>
