Implement placeholder img

--- a/index.html
+++ b/index.html
@@ -270,6 +270,16 @@
         </div>
     </section>
 
+    <section class="placeholder-img">
+        <div class="container">
+            <div class="row">
+                <div class="col d-flex">
+                    <img class="img-fluid" src="./imgs/additional-support-1.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
