implement blog.html

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="#">A Exposição</a>
+                            <a class="nav-link text-uppercase" href="index.html">A Exposição</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="#">Setor Animal</a>
+                            <a class="nav-link text-uppercase" href="blog.html">Setor Animal</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-uppercase" href="#">Rodeio</a>
