Implement quero-ver-mais and galeria-imagem

--- a/blog.html
+++ b/blog.html
@@ -138,6 +138,111 @@
             </div>
         </section>
 
+        <!--Imagens quero ver mais-->
+        <section class="quero-ver-mais py-5">
+            <div class="container">
+                <div class="row g-3">
+                    <!-- Card 1 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="img-fluid" src="./imgs/Parque-Crianca-82.jpg" alt="Evento 1">
+                            <div class="card-overlay">
+                                <p>Centenas de pessoas participam do lançamento da Expo 2024</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="img-fluid" src="./imgs/Bovinos-07-03-05.jpg" alt="Evento 2">
+                            <div class="card-overlay">
+                                <p>Centenas de pessoas participam do lançamento da Expo 2024</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 3 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="img-fluid" src="./imgs/Palestra 11-03-1 copy.jpg" alt="Evento 3">
+                            <div class="card-overlay">
+                                <p>Centenas de pessoas participam do lançamento da Expo 2024</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Botão -->
+                <div class="text-center mt-4">
+                    <a href="#" class="btn btn-gold text-uppercase">Quero ver mais</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="galeria-imagens-blog py-5">
+            <div class="container">
+                <h2 class="mb-4">GALERIA DE IMAGENS</h2>
+                <div class="row">
+                    <!-- Imagem principal -->
+                    <div class="col-md-8">
+                        <div class="img-principal">
+                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-58.jpg" alt="Imagem principal">
+                            <div class="descricao">
+                                <p>Lorem ipsum dolor sit amet</p>
+                                <a href="./imgs/Parque-Crianca-58.jpg" download
+                                    class="btn btn-outline-secondary">Download em alta resolução</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Miniaturas -->
+                    <div class="col-md-4">
+                        <div class="miniaturas d-flex flex-column gap-3">
+                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-31.jpg" alt="Miniatura 1">
+                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-50.jpg" alt="Miniatura 2">
+                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-58.jpg" alt="Miniatura 3">
+                        </div>
+                    </div>
+                </div>
+                <!-- Navegação -->
+                <div class="navegacao mt-4 d-flex justify-content-end">
+                    <a href="#" class="btn btn-link"><i class="fa-solid fa-arrow-left"></i> Voltar</a>
+                    <a href="#" class="btn btn-link">Início</a>
+                    <a href="#" class="btn btn-link"><i class="fa-solid fa-print"></i> Imprimir</a>
+                    <a href="#" class="btn btn-link"><i class="fa-solid fa-download"></i> Baixar</a>
+                </div>
+            </div>
+        </section>
+
+        <!--Placeholder img-->
+        <section class="placeholder-img">
+            <div class="container">
+                <div class="row">
+                    <div class="col d-flex">
+                        <img class="img-fluid" src="./imgs/additional-support-1.jpg">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!--Footer-->
+    <footer class="rodape">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <h6 class="mb-3">49ª Exposição Agropecuária, Comercial e Industrial
+                        de Umuarama/22ª Feira Internacional</h6>
+                    <p>Sociedade Rural de Umuarama
+                        Parque de Exposições Dario Pimenta da Nóbrega
+                        Rodovia PR-323 – Km 304 – Caixa Postal 499
+                        CEP 87502-970
+                        Umuarama – Paraná - Brasil</p>
+                </div>
+                <div class="col-md-7 d-flex align-items-center justify-content-center">
+                    <p>Fone: +55 44 361 9500</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
