--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <!-- Modal do Vídeo Principal -->
         <div class="modal fade" id="videoPrincipalModal" tabindex="-1" aria-labelledby="videoPrincipalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg">
+            <div class="modal-dialog modal-lg modal-fullscreen-sm-down">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -250,7 +250,7 @@
 
         <!-- Modal Vídeo 1 -->
         <div class="modal fade" id="video1Modal" tabindex="-1" aria-labelledby="video1Label" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
+            <div class="modal-dialog modal-lg modal-fullscreen-sm-down">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -267,7 +267,7 @@
 
         <!-- Modal Vídeo 2 -->
         <div class="modal fade" id="video2Modal" tabindex="-1" aria-labelledby="video2Label" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
+            <div class="modal-dialog modal-lg modal-fullscreen-sm-down">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -284,7 +284,7 @@
 
         <!-- Modal Vídeo 3 -->
         <div class="modal fade" id="video3Modal" tabindex="-1" aria-labelledby="video3Label" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
+            <div class="modal-dialog modal-lg modal-fullscreen-sm-down">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
